# candidate-eval

./: .gitignore  ARCHITECTURE.md  BLOG_BRIEF.md  CLAUDE.md  HANDOFF-V03.md  HANDOFF.md  PROJECT.md  README.md  assessment.json  posting.txt  pyproject.toml  resume-bullets.md
.claude/: grill-me-user-flow-2026-03-19.md  ralph-accuracy-prompt.md
.claude/handoffs/: 2026-03-26-v07-depth-model.md
.claude/plans/: 2026-03-19-v04-user-flow-refactor.md
.github/: copilot-instructions.md
.hypothesis/constants/: 040101a75cbeb0ed  121c58124df846c0  145e75e9e3d34361  1502ac49b091ee53  150fcfa5e4ccca27  2ad848e80a1bb740  2f004cfcfaecb104  317dcf4b2affcb32  3cda0d1bb3b450f8  4aa380779acc5658  51183b7018922953  5225f25e4d03a555  52f649b00ba85bed  5fdf82a143272e85  61b140bd485419e8  6294ad7933c582e9  63fbee30f6887559  77230a3cb7564dc0  77377a7b7483714f  7ca4b82c10c0161f  939c85707f386c48  955b03ecce34f343  9afd349ad6b8aed4  9d5e845d4181bf79  9e12c07ea132827b  aa4e54f208fc9355  ae4b8cf2715f0934  b6b36ac14936f805  c2e1984c97b2eb32  c2eec2d2d5683331  c641c5728f8d0b81  c8b6cd52372b22e4  d0293cc9be1017c2  ecac3b98b9d8d013  f875b2231ccb1a0f  f8bbf6b744f575d5  fb08f38006abe63a  fedb770c8a44cc33
docs/: ROADMAP.md  accuracy-improvement-journey.md
extension/: background.js  content.js  dashboard.html  dashboard.js  manifest.json  package-lock.json  package.json  popup.css  popup.html  popup.js  utils.js  vitest.config.js
extension/preview/: confidence-metrics.html
extension/tests/: chrome-mock.js  stale.test.js  storage.test.js
plans/: 01-candidate-profile-schema.md  03-session-manifest-hashing.md  04-browser-extension-quick-match.md
scripts/: export_golden_set.py  record_claude_fixtures.py
src/claude_candidate/: __init__.py  ai_scoring.py  claude_cli.py  cli.py  cli_prompts.py  commit_filter.py  commit_highlighter.py  company_enrichment.py  company_research.py  corpus_cli.py  correlator.py  eligibility_evaluator.py  evidence_compactor.py  extraction_cache.py  extractor.py  fit_exporter.py  generator.py  manifest.py  merger.py  message_format.py  pii_gate.py  proof_generator.py  quick_match.py  repo_scanner.py  requirement_parser.py  resume_parser.py  sanitizer.py  server.py  session_scanner.py  site_renderer.py  skill_taxonomy.py  storage.py  whitelist.py
tests/: __init__.py  conftest.py  strategies.py  test_ai_scoring.py  test_backfill.py  test_claude_cli.py  test_cli.py  test_cli_prompts.py  test_commit_filter.py  test_commit_highlighter.py  test_company_enrichment.py  test_company_research.py  test_corpus_cli.py  test_correlator.py  test_curated_resume.py  test_distillation.py  test_eligibility_evaluator.py  test_enrichment.py  test_evidence_compaction.py  test_evidence_compaction_integration.py  test_extractor.py  test_fit_exporter.py  test_generator.py  test_integration.py  test_manifest.py  test_merged_profile.py  test_merged_profile_projects.py  test_merger.py  test_message_format.py  test_mission_reanalysis.py  test_ml_enrichment.py  test_pii_gate.py  test_pipeline_integration.py  test_prepare_assess_inputs.py  test_profile_review.py  test_proof_generator.py  test_quick_match.py  test_repo_profile.py  test_repo_project_schema.py  test_repo_scanner.py  (+12 more)
tests/fixtures/: curated_resume_sample.json  sample_candidate_profile.json  sample_job_posting.requirements.json  sample_job_posting.txt  (+3 more)
worker/: fit-worker.js  wrangler.toml
(+132 files in other folders)
