[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-candidate"
version = "0.5.0"
description = "Privacy-first pipeline: Claude Code session logs + resume → honest, evidence-backed job fit assessments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Brian Ruggieri" }]
keywords = ["claude", "ai", "job-search", "resume", "session-logs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "rich>=13.0",
    "aiosqlite>=0.20",
    "rapidfuzz>=3.0",
    "datafog>=4.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "orjson>=3.9",
    "pyahocorasick>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "asgi-lifespan>=2.1",
    "mypy>=1.11",
    "ruff>=0.7",
    "syrupy>=4.0",
    "hypothesis>=6.100",
    "pytest-subprocess>=1.5",
]
ml = [
    "torch>=2.2",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
]

[project.scripts]
claude-candidate = "claude_candidate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_candidate"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: integration tests that spawn subprocesses or call real APIs (skip with -m 'not slow')",
]
